--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # program storage files
 colors.json
 words.txt
-recordings/*
+cliprecorder/recordings/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
